--- a/source/main.tex
+++ b/source/main.tex
@@ -1,47 +1,504 @@
-\documentclass[12pt]{article}
-\usepackage{lingmacros}
-\usepackage{tree-dvips}
+\documentclass[a4paper]{article}
+\usepackage{amsmath}
+\usepackage{hyperref}
+\usepackage{xcolor}
+\usepackage{latexsym}\usepackage{amsbsy}\usepackage{amssymb}
+\usepackage{mathrsfs}
+\usepackage{fancyhdr}
+%\usepackage[latin1]{inputenc}
+\pagestyle{fancy}
+\fancyhead{}
+\fancyhead[LO,RE]{\sc PS FA+TOP -- Sodini/Teschl -- WS23/24}
+\fancyhead[RO,LE]{\thepage}
+\cfoot{}
+\addtolength{\headheight}{1.5pt}
+\setlength{\parindent}{0pt}
+\renewcommand{\theenumii}{\roman{enumii}}
+\renewcommand{\labelenumii}{(\theenumii)}
+\newcommand{\ti}{\tilde}
+\newcommand{\bs}{\backslash}
+\newcommand{\nn}{\nonumber}
+\newcommand{\ol}{\overline}
+\newcommand{\ul}{\underline}
+\newcommand{\bea}{\begin{eqnarray}}
+\newcommand{\eea}{\end{eqnarray}}
+\newcommand{\mb}{\mbox}
+\newcommand{\ba}{\begin{array}}
+\newcommand{\ea}{\end{array}}
+
+\newcommand{\eps}{\varepsilon}
+\newcommand{\vphi}{\varphi}
+\newcommand{\om}{\omega}
+\newcommand{\gam}{\gamma}
+\newcommand{\sig}{\sigma}
+\newcommand{\lam}{\lambda}
+
+\newcommand{\id}{{\mathbb I}}
+\newcommand{\I}{\mathrm{i}}
+\newcommand{\E}{\mathrm{e}}
+\newcommand{\R}{\mathbb{R}}
+\newcommand{\N}{{\mathbb N}}
+\newcommand{\Z}{{\mathbb Z}}
+\newcommand{\C}{{\mathbb C}}
+\newcommand{\T}{{\mathbb T}}
+\newcommand{\blo}{\mathfrak{L}}
+\newcommand{\clo}{\mathfrak{C}}
+\newcommand{\FT}{\mathcal{F}}
+\newcommand{\MT}{\mathcal{M}}
+\newcommand{\tr}{{\rm tr}}
+\newcommand{\hr}{\mathfrak{H}}
+\newcommand{\sr}{\mathcal{S}}
+\newcommand{\db}{\mathfrak{D}}
+\newcommand{\qb}{\mathfrak{Q}}
+\newcommand{\calA}{\mathcal{A}}
+\newcommand{\calI}{\mathcal{I}}
+\newcommand{\spr}[2]{\langle #1 , #2 \rangle}
+\newcommand{\rank}{\mathrm{rank}}
+\newcommand{\supp}{\mathrm{supp}}
+\newcommand{\spn}{\mathrm{span}}
+\renewcommand{\ker}{\mathrm{Ker}}
+\newcommand{\ran}{\mathrm{Ran}}
+\newcommand{\re}{\mathrm{Re}}
+\newcommand{\im}{\mathrm{Im}}
+\newcommand{\Ran}{{\rm Ran}}
+\newcommand{\intp}[1]{[\![ #1 ]\!]}
+\DeclareMathOperator{\lspan}{span}
+\DeclareMathOperator{\gram}{\Gamma}
+\DeclareMathOperator{\dist}{dist}
+\DeclareMathOperator*{\slim}{s-lim}
+\DeclareMathOperator*{\wlim}{w-lim}
+\DeclareMathOperator*{\wslim}{w*-lim}
+
+
+\makeatletter
+\newif\ifsolutions
+\solutionstrue
+\newenvironment{solution}%
+{%
+\ifsolutions\par\noindent\color{gray}\normalfont\textbf{Solution.}
+\else\setbox0=\vbox\bgroup\color@begingroup\fi
+}{%
+\ifsolutions
+\else\color@endgroup\egroup\fi
+}%
+\makeatother
+
+
 \begin{document}
+\thispagestyle{empty}
+\begin{center}
+  {\bf \Large PS Topologie und Funktionalanalysis} \\[1em]
+{\bf \large Giacomo Sodini und Gerald Teschl}\\[1em]
+  { \large WS2023/24}
+\end{center}
+\vskip3em
+Note: References refer to the lecture notes.
+\vskip1em
+\begin{enumerate}
+\item
+Suppose $\sum_{n=1}^\infty |c_n|<\infty$. Show that
+\[\ifsolutions\tag{$*$}\fi
+u(t,x) := \sum_{n=1}^\infty c_n \E^{-(\pi n)^2 t} \sin(n \pi x), 
+\]
+is continuous for $(t,x)\in[0,\infty)\times[0,1]$ and solves the heat equation for $(t,x)\in(0,\infty)\times[0,1]$.
+(Hint: Weierstrass M-test. When can you interchange
+the order of summation and differentiation?)
+\begin{solution}
+Using $|c_n \E^{-(\pi n)^2 t} \sin(n \pi x)| \le |c_n|$ shows that the series ($*$)
+converges uniformly for $(t,x)\in[0,\infty)\times[0,1]$ and hence $u(t,x)$ is continuous there (recall that uniform limit of continuous functions is a continuous function).
+Moreover, $|\frac{\partial}{\partial t}c_n \E^{-(\pi n)^2 t} \sin(n \pi x)| = |-(\pi n)^2 c_n \E^{-(\pi n)^2 t} \sin(n \pi x)|
+\le |\pi^2 n^2 c_n \E^{-(\pi n)^2 t_0}|$ for $t\ge t_0>0$ shows that the derivative of the partial sum
+converges uniformly and hence ($*$) is continuously differentiable
+with respect to $t$ for $(t,x)\in[t_0,\infty)\times[0,1]$. In particular, we can interchange differentiation and summation.
+The same argument applies to the partial derivative with respect to $x$ as well as to any higher order derivatives.
+Since $t_0>0$ is arbitrary the claim follows (i.e.~$\partial_{xx} u(t,x)0 =\partial_t u(t,x)$ in $[0,+\infty) \times [0,1]$).
+\end{solution}
 
-\section*{Notes for My Paper}
+\item
+Show that $| \|f\|-\|g\| | \le \|f - g\|$.
+\begin{solution}
+From the triangle inequality we obtain $\|f\| = \|(f-g)+g\| \le \|f-g\| +\|g\|$ which shows
+$\|f\| - \|g\| \le \|f-g\|$. Reversing the roles of $f$ and $g$ shows $-(\|f\| - \|g\|) \le \|g-f\|=\|f-g\|$
+from which the claim follows.
+\end{solution}
 
-Don't forget to include examples of topicalization.
-They look like ciao!cccc
+\item
+Let $X$ be a Banach space.
+Show that the norm, vector addition, and multiplication by scalars are
+continuous. That is, if $f_n\to f$, $g_n\to g$, and $\alpha_n\to \alpha$, then
+$\| f_n \|\to\| f \|$, $f_n+g_n\to f+g$, and $\alpha_n g_n \to \alpha g$.
+\begin{solution}
+From the previous problem we see $| \|f\|-\|f_n\| | \le \|f - f_n\| \to 0$ which shows that the
+norm is continuous.
+Next, $\|(f_n + g_n) - (f+g)\|\le \|f_n-f\|+\|g_n-g\| \to 0$ shows that vector addition is continuous.
+Similarly, $\|\alpha_n f_n - \alpha f\|\le \|\alpha_n f_n- \alpha_n f\|+\|\alpha_n f- \alpha f\| \le
+|\alpha_n| \|f_n-f\| + |\alpha_n-\alpha| \|f_n\| \to 0$ shows that scalar multiplication is continuous
+since convergent sequences are bounded.
+\end{solution}
 
-{\small
-\enumsentence{Topicalization from sentential subject:\\ 
-\shortex{7}{a John$_i$ [a & kltukl & [el & 
-  {\bf l-}oltoir & er & ngii$_i$ & a Mary]]}
-{ & {\bf R-}clear & {\sc comp} & 
-  {\bf IR}.{\sc 3s}-love   & P & him & }
-{John, (it's) clear that Mary loves (him).}}
-}
+\item
+While $\ell^1(\N)$ is separable, it still has room for an uncountable set of
+linearly independent vectors. Show this by considering vectors of the form
+\[
+a^\alpha = (1,\alpha,\alpha^2,\dots), \qquad \alpha\in(0,1).
+\]
+(Hint: Recall the Vandermonde determinant.)
+\begin{solution}
+Fix $n$ and take $n$ different values $\alpha_1,\dots,\alpha_n$. Consider the
+corresponding finite vectors $b^\alpha=(1,\alpha,\dots,\alpha^{n-1})$ and
+note that the vectors $a^{\alpha_1},\dots, a^{\alpha_n}$ are linearly independent in $\ell^1(\N)$
+if the vectors $b^{\alpha_1},\dots, b^{\alpha_n}$ are linearly independent in $\C^n$ (indeed, if the vectors $a^{\alpha_1},\dots, a^{\alpha_n}$ are linearly dependent in $\ell^1(\N)$ we can find $(\gamma_1, \dots, \gamma_n) \ne (0, \dots, 0) \in \C^n$ such that $\sum_i a^{\alpha_i} \gamma_i = (0, 0, \dots )$ hence also $\sum_i b^{\alpha_i}\gamma_i = (0, \dots, 0)$ so that the vectors $b^{\alpha_1},\dots, b^{\alpha_n}$ are linearly dependent in $\C^n$).  But this is
+the case iff the Vandermonde determinant
+\[
+\det\begin{pmatrix} 1& \cdots & 1\\ \alpha_1 & \cdots& \alpha_n\\ \vdots & \ddots & \vdots\\ \alpha_1^{n-1} & \cdots & \alpha_n^{n-1}\end{pmatrix}
+= \prod_{1\le j<k \le n} (\alpha_k-\alpha_j)
+\]
+does not vanish.
+\end{solution}
 
-\subsection*{How to handle topicalization}
+\item
+Prove Young's inequality
+\[\ifsolutions\tag{$*$}\fi
+\alpha^{1/p} \beta^{1/q} \le \frac{1}{p} \alpha + \frac{1}{q} \beta, \qquad \frac{1}{p} + \frac{1}{q}=1, \quad \alpha,\beta \ge 0.
+\]
+Show that equality occurs precisely if $\alpha=\beta$.
+(Hint: Take logarithms on both sides.)
+\begin{solution}
+Since $\log$ is concave we have
+\[
+\log(\frac{1}{p} \alpha + \frac{1}{q} \beta) \ge \frac{1}{p} \log(\alpha) + \frac{1}{q} \log(\beta) = \log(\alpha^{1/p} \beta^{1/q}).
+\]
+Applying $\exp$ to both sides gives ($*$). Since $\log$ is even strictly concave we have equality only for $\alpha=\beta$.
+\end{solution}
 
-I'll just assume a tree structure like (\ex{1}).
+\item
+Show that $\ell^p(\N)$, $1\le p <\infty$, is complete. 
+\begin{solution}
+Assume that $a^n= (a^n_j)_{j=1}^\infty$ is a Cauchy sequence in $\ell^p(\N)$. This means that for every $\eps>0$ we can find some $N \in \N$ such that $\|a^n-a^m\|_p < \eps$ for every $m,n>N$. Since $|a^n_j -a^m_j| \le \|a^n-a^m\|_p$ for every $j$, this implies that for every $j$ the sequence $a^n_j$ is Cauchy in $\C$. By completeness of $\C$ it has a limit denoted by $a_j$. Let $a:=(a_1, \dots)$. We show that $a \in \ell^p(\N)$ and that $a_n \to a$ in $\ell^p(\N)$. We have for every $k \in \N$ that
+\[ (\sum_{j=1}^k |a^n_j-a^m_j|^p)^{1/p} \le \|a^n-a^m\|_p < \eps\]
+so that passing to the limit as $m \to + \infty$, we get
+\[ (\sum_{j=1}^k |a^n_j-a_j|^p)^{1/p} \le \|a^n-a^m\|_p < \eps.\]
+Being this true for every $k \in \N$, this implies that $\|a-a^n\|_p < \eps$ hence $a-a^n \in \ell^p(\N)$ so that $a=(a-a^n)+a^n \in \ell^p(\N)$ since $a^n \in \ell^p(\N)$. From $\|a^n-a\|_p < \eps$ we also deduce that $a^n \to a$ in $\ell^p(\N)$.
+\end{solution}
 
-{\small
-\enumsentence{Structure of A$'$ Projections:\\ [2ex]
-\begin{tabular}[t]{cccc}
-    & \node{i}{CP}\\ [2ex]
-    \node{ii}{Spec} &   &\node{iii}{C$'$}\\ [2ex]
-        &\node{iv}{C} & & \node{v}{SAgrP}
-\end{tabular}
-\nodeconnect{i}{ii}
-\nodeconnect{i}{iii}
-\nodeconnect{iii}{iv}
-\nodeconnect{iii}{v}
-}
-}
+\item
+Show that $\ell^\infty(\N)$ is a Banach space.
+\begin{solution}
+That $\ell^\infty(\N)$ is a vector space and $\|.\|_\infty$ is a norm over it, is straightforward. To see completeness let $a^n=(a^n_j)_{j=1}^\infty$
+be a Cauchy sequence. This implies that $a^n_j$ is a Cauchy sequence for fixed $j$ and, by completeness
+of $\C$, it has a limit: $\lim_{n\to\infty} a^n_j= a_j$. Moreover, $\|a^n-a^m\|_\infty\le\eps$ implies
+$|a^n_j-a^m_j|\le\eps$ for all $j$ and hence (let $m\to\infty$) $|a^n_j-a_j|\le\eps$ for all $j$, that is,
+$\|a^n-a\|_\infty\le\eps$. Hence $(a-a^n)\in \ell^\infty(\N)$ and since $a^n \in\ell^\infty(\N)$, we finally conclude
+$a= a^n+(a-a^n) \in \ell^\infty(\N)$. By our estimate $\|a-a^n\|_\infty \le \eps$, our candidate $a$
+is indeed the limit of $a^n$.
+\end{solution}
 
-\subsection*{Mood}
+\item
+Is $\ell^1(\N)$ a closed subspace of $\ell^\infty(\N)$ (with respect to the $\|.\|_\infty$ norm)? If not, what is its closure?
+\begin{solution}
+Since $\ell^1(\N) \subset c_0(\N)$ (the space of sequences converging to $0$) and since the latter is a closed subspace, the closure of $\ell^1(\N)$ cannot be larger.
+Moreover, for any $a\in c_0(\N)$ we can obtain a sequence $a^n:=(a_1,\dots,a_n,0,\dots)$ by truncation. Since
+$\|a-a^n\|_\infty \to 0$ and since $a^n\in\ell^1(\N)$, we see that the closure of $\ell^1(\N)$ equals $c_0(\N)$.
+\end{solution}
 
-Mood changes when there is a topic, as well as when
-there is WH-movement.  \emph{Irrealis} is the mood when
-there is a non-subject topic or WH-phrase in Comp.
-\emph{Realis} is the mood when there is a subject topic
-or WH-phrase.
+%%%%%%%%%%
 
+
+\item
+Show that $\ell^\infty(\N)$ is not separable. (Hint: Consider sequences which
+take only the value one and zero. How many are there? What is the distance
+between two such sequences?)
+\begin{solution}
+The set $F=\{ a \in \ell^\infty(\N) | a_j\in\{0,1\}\}$ is uncountable. Indeed, if it were countable $F=\{a^n\}_{n\in\N}$,
+define $b=(b_j)_{j = 1}^{\infty}$ as $b_j:=1-a^j_j$ and note that $b\in F$ but $b\ne a^n$ for all $n$.
+
+Now let $W\subseteq \ell^\infty(\N)$ be a dense set. Then for every $a\in F$ there is some $b_a \in W$ such that
+$\|a-b_a\|_\infty<\frac{1}{2}$. Then all these vectors $b_a$ are different since $a\ne\ti{a}$ implies
+$1=\|a-\ti{a}\|_\infty = \|a - b_a + b_a - b_{\ti{a}} + b_{\ti{a}} - \ti{a}\|_\infty < \frac{1}{2} + \|b_a - b_{\ti{a}}\|_\infty + \frac{1}{2}$,
+that is $0< \|b_a - b_{\ti{a}}\|_\infty$. Hence $W$ contains the uncountable subset $\{ b_a | a \in F\}$.
+\end{solution}
+
+\item
+Show that there is equality in the H\"older inequality for $1<p<\infty$ if and only if either $a=0$ or $|b_j|^q= \alpha |a_j|^p$ for all $j\in\N$.
+Show that we have equality in the triangle inequality for $\ell^1(\N)$ if and only if $a_j b_j^* \ge 0$ for all $j\in\N$ (here the `$*\!$' denotes complex conjugation).
+Show that we have equality in the triangle inequality for $\ell^p(\N)$ with $1<p<\infty$ if and only if $a=0$ or $b=\alpha a$ with $\alpha\ge 0$.
+\begin{solution}
+It is clear that if $a=0$ or $b=0$ then there is equality in the H\"older inequality. We assume $a,b \ne 0$ and we are left to show that equality in the H\"older inequality is equivalent to the existence of $\alpha > 0$ such that $|b_j|^q= \alpha |a_j|^p$ for all $j\in\N$. Define $\hat{a}:=a/\|a\|_p$ and $\hat{b}:=b/\|b\|_q$. We have that $\|ab\|_1 = \|a\|_p \|b\|_q$ if and only if $\|\hat{a} \hat{b}\|_1 = 1$ if and only if $\|\hat{a} \hat{b}\|_1 = \frac{1}{p} \|\hat{a}\|_p^p + \frac{1}{q} \|b\|_q^q$ if and only if 
+\[ \sum_{j=1}^{\infty} |\hat{a}_j \hat{b}_j| = \frac{1}{p} \sum_{j=1}^{\infty} |\hat{a}_j|^p + \frac{1}{q} \sum_{j=1}^{\infty} |\hat{b}_j|^q\]
+if and only if $|\hat{a}_j \hat{b}_j| = \frac{1}{p} |\hat{a}_j|^p + \frac{1}{q} |b_j|^q$ for all $j \in \N$ if and only if $(|\hat{a}_j|^p)^{1/p}|(\hat{b}_j|^q)^{1/q} = \frac{1}{p} |\hat{a}_j|^p + \frac{1}{q} |b_j|^q$ for all $j \in \N$ if and only if (Problem 5) $|\hat{a}_j|^p= |\hat{b}_j|^q$ for all $j \in \N$ if and only if $|b_j|^q= \|b\|_q/\|a\|_p |a_j|^p$ for all $j \in \N$.
+
+When $p=1$, we have that $\|a b\|_1 = \|a\|_1 \|b\|_\infty$ if and only if 
+\[ \sum_{j=1}^{\infty} |a_j b_j| = \sum_{j=1}^\infty |a_j| \|b\|_\infty \]
+if and only if
+\[ \sum_{j=1}^{\infty} |a_j|(|b_j|-\|b\|_\infty) =0\]
+if and only if $b_j=\|b\|_\infty$ for all $j \in \N$. Of course if $a=0$ or $b=0$ then there is equality in the H\"older inequality.
+
+
+For the second claim note that $\|a + b\|_1 = \|a\|_1+\|b\|_1$ if and only if
+\[ \sum_{j=1}^{\infty} |a_j+b_j| = \sum_{j=1}^{\infty}|a_j| + \sum_{j=1}^{\infty}|b_j|\]
+if and only if $|a_j+b_j|=|a_j|+|b_j|$ for all $j$, that is, $\re(a_j b_j^*)=|a_j b_j|$ for all $j$ if and only if $a_jb_j^*=|a_jb_j^*| \ge 0$. Note that this is equivalent to
+$a_j$ and $b_j$ being parallel (as vectors in the complex plane).
+
+For the third claim we can of course assume $a,b\ne 0$ since otherwise the claim is trivial. It is also clear that the condition is sufficient to have equality in the triangle inequality.
+In general we have that
+\begin{align*}
+ \|a+b\|_p^p = \sum_{j=1}^{\infty} |a_j+b_j|^p &= \sum_{j=1}^{\infty} |a_j+b_j| |a_j+b_j|^{p-1} \\
+ &\le  \sum_{j=1}^{\infty} |a_j| |a_j+b_j|^{p-1} + \sum_{j=1}^{\infty} |b_j| |a_j+b_j|^{p-1} \\
+ & \le \|a\|_p \left ( \sum_{j=1}^\infty |a_j+b_j|^{(p-1)q} \right )^{1/q} +\|b\|_p \left ( \sum_{j=1}^\infty |a_j+b_j|^{(p-1)q} \right )^{1/q} \\
+ & = \|a\|_p \left (\left ( \sum_{j=1}^\infty |a_j+b_j|^{p} \right )^{1/p} \right )^{p/q} +\|b\|_p \left ( \left ( \sum_{j=1}^\infty |a_j+b_j|^{p} \right )^{1/p}  \right )^{p/q}\\
+ & = \|a\|_p \|a+b\|_p^{p-1} + \|b\|_p \|a+b\|_p^{p-1} \\
+ & = (\|a\|_p + \|b\|_p) \|a+b\|_p^{p-1}.
+ \end{align*}
+If $\|a+b\|_p = \|a\|_p + \|b\|_p$ then the above inequalities are all equalities. The first inequality above being an equality implies that $|a_j+b_j|=|a_j|+ |b_j|$ for all $j \in \N$. By the second claim, we get that $a_j b_j^* \ge 0$ for all $j \in \N$. The second inequality being an equality implies that (first claim) that $|a_j|= \alpha |a_j+b_j|$ and $|b_j|=\beta |a_j+b_j|$ for all $j \in \N$. We are thus dealing, for every $j \in \N$, with two complex numbers $z_1:=b_j$ and $z_2:= \frac{\alpha}{\beta} a_j$ having the same modulus and the same direction, hence equal.
+\end{solution}
+
+\item\label{pr:strconv}
+Let $X$ be a normed space. Show that the following conditions are equivalent.
+\begin{enumerate}
+\item If $\|x+y\|=\|x\|+\|y\|$ then $y=\alpha x$ for some $\alpha\ge 0$ or $x=0$.
+\item If $\|x\|=\|y\|=1$ and $x\ne y$ then $\|\lam x + (1-\lam) y\| < 1$ for all $0<\lam<1$.
+\item If $\|x\|=\|y\|=1$ and $x\ne y$ then $\frac{1}{2}\|x + y\| < 1$.
+\item The function $x\mapsto \|x\|^2$ is strictly convex.
+\end{enumerate}
+A norm satisfying one of them is called strictly convex.
+
+Show that $\ell^p(\N)$ is strictly convex for $1<p<\infty$ but not for $p=1,\infty$.
+\begin{solution}
+(i)$\Rightarrow$(ii): Suppose $\|x\|=\|y\|=1$ and $x\ne y$ but $\|\lam x + (1-\lam) y\| =1 =\|\lam x\| + \|(1-\lam) y\|$ for some $\lam\in(0,1)$. Then (i) implies
+$\lam x= \alpha (1-\lam)y$ and  hence $x=y$, a contradiction.
+
+(ii)$\Rightarrow$(i): If $x=0$ or $y=0$ there is nothing to show. Hence consider $\ti{x}=\frac{x}{\|x\|}$ and $\ti{y}=\frac{y}{\|y\|}$. Then, if we don't have
+$y=\alpha x$ for some $\alpha\ge 0$, we also have $\ti{x}\ne\ti{y}$ and hence $\|x+y\|=\|\lam x + (1-\lam) y\| (\|x\|+\|y\|)< \|x\|+\|y\|$ for $\lam=\frac{\|x\|}{\|x\|+\|y\|}$.
+
+(ii)$\Rightarrow$(iii): Trivial.
+
+(iii)$\Rightarrow$(ii): Suppose $\|x\|=\|y\|=1$ and $x\ne y$. If $\lam\le \frac{1}{2}$ then $\|\lam x + (1-\lam) y\| = 2\lam \|\frac{1}{2} x + \frac{1}{2} y + \frac{1-2\lam}{2\lam}y\|
+\le 2\lam \|\frac{1}{2} x + \frac{1}{2} y\| + (1-2\lam) < 1$. If $\lam>\frac{1}{2}$ reverse the roles of $x$ and $y$.
+
+(ii)$\Rightarrow$(iv): We compute
+\begin{align*}
+\|\lam x + (1-\lam) y\|^2 & \le (\lam \|x\| + (1-\lam) \|y\|)^2\\ & = |x|^2 \lam^2 + |y|^2 (1+\lam^2-2\lam) + 2\lam(1-\lam) |x||y|\\
+& = \|x\|^2 (\lam^2 - \lam + \lam) + \|y\|^2 (1-\lam + \lam^2 - \lam) + (\lam^2 - \lam) (-2\|x\|\|y\|) \\
+& = \lam \|x\|^2 + (1-\lam) \|y\|^2 + (\lam^2-\lam) ( \|x\|^2 + \|y\|^2 - 2\|x\|\|y\| )\\
+&= \lam \|x\|^2 + (1-\lam) \|y\|^2 -\lam(1-\lam) (\|x\|-\|y\|)^2
+\end{align*}
+from which the desired inequality follows for $\|x\|\ne\|y\|$. For $\|x\|=\|y\|$ this follows from (ii) by scaling.
+
+(iv)$\Rightarrow$(ii): Trivial.
+
+Finally, by Problem~10 $\ell^p(\N)$ is strictly convex for $1<p<\infty$. To see that 
+\begin{itemize}
+\item $\ell^1(\N)$ is not strictly convex consider $a=(1,0,0,\dots)$, $b=(0,1,0,\dots)$: then $\|a\|_1= \|b\|_1=1$ and $a \ne b$ but $\frac{1}{2} \|a+b\|= 1$. Contradiction with (iii).
+\item $\ell^\infty(\N)$  is not strictly convex consider $a=(1,1,0,\dots)$, $b=(1,-1,0,\dots)$: then $\|a\|_\infty = \|b\|_\infty =1$ and $a \ne b$ but $\frac{1}{2}\|a+b\|=1$. Contradiction with (iii).
+\end{itemize}
+\end{solution}
+
+\item
+Show that $p_0 \le p$ implies $\ell^{p_0}(\N)\subset \ell^p(\N)$ and $\|a\|_p \le \|a\|_{p_0}$.
+Moreover, show
+\[
+\lim_{p\to\infty} \|a\|_p = \|a\|_\infty.
+\]
+\begin{solution}
+First of all observe that $|a_j| \le \|a\|_{p_0}$ for all $j \in \N$ so that $\|a\|_\infty \le \|a\|_{p_0}$. Hence $|a_j|^p= |a_j|^{p-p_0} |a_j|^{p_0} \le \|a\|_\infty^{p-p_0} |a_j|^{p_0}$ implies
+$\|a\|_p^p \le \|a\|_\infty^{p-p_0} \|a\|_{p_0}^{p_0} \le \|a\|_{p_0}^p$ which proves the first part.
+
+By $\|a\|_\infty \le \|a\|_p$ it suffices to show that for every $\eps>0$ there is some $p$ with $\|a\|_p \le \|a\|_\infty + \eps$.
+Moreover, w.l.o.g.\ we can assume $\|a\|_\infty=1$. Choose $N$ such that $\sum_{j>N} |a_j|^{p_0} \le \eps$ and
+hence also $\sum_{j>N} |a_j|^p \le \eps$ for $p\ge p_0$. Then
+\[
+\|a\|_p^p = \sum_{j\le N} |a_j|^p + \sum_{j>N} |a_j|^p \le N + \eps \le 1 + p\eps
+\]
+for $p$ sufficiently large. Hence by the Bernoulli inequality $\|a\|_p^p \le (1+\eps)^p$ implying $\|a\|_p \le \|a\|_\infty + \eps$
+as required.
+\end{solution}
+
+\item
+Let $I$ be a compact interval and consider $X= C(I)$. Which of following sets are subspaces of $X$? If yes,
+are they closed?
+\begin{enumerate}
+\item monotone functions
+\item even functions
+\item continuous piecewise linear functions
+\item $\{ f\in C(I) | f(c)= f_0 \}$ for some fixed $c\in I$ and $f_0\in\R$
+\end{enumerate}
+\begin{solution}
+(i) No subspace ( $(x \chi_{[0,1/2]} + 1/2 \chi_{[0,1]}) - ( 0 \chi_{[0,1/2]} + x\chi{[1/2,1]} = x \chi_{[0,1/2]} +(1/2-x)\chi_{[1/2,1]}$).\\
+(ii) Closed subspace (use pointwise convergence).\\
+(iii) Dense subspace (but not closed): take $I=[0,1]$ and let $f \in C(I)$ and define
+\[ f_n(t):= f(i/n) + \left [ f((i+1)/n) - f(i/n) \right ](nt-i) \]
+if $ t \in [i/n, (i+1)/n], \, i=0, \dots, n-1$. Then take $t \in [0,1]$; there exists some $i \in \{0,\dots, n-1\}$ such that $t \in [i/n, (i+1)/n]$ so that
+\begin{align*}
+|f_n(t)-f(t)) &\le |f(i/n)-f(t)|(i+1-nt) + |f((i+1)/n)- f(t)| (nt-i) \\
+&\le |f(i/n)-f(t)| + |f((i+1)/n)- f(t)|.
+\end{align*}
+Since $f$ is uniformly continuous in $I$, for every $\eps>0$ there exists some $\delta_\eps>0$ such that $|f(t_1)-f(t_2)| < \eps$ whenever $|t_1-t_2|< \delta_\eps$. Let $\eps>0$ be fixed and let $N \in \N$ be such that $N > (\delta_{\eps/2})^{-1}$. Then if $n \ge N$, we have that $1/n \le \delta_{\eps/2}$ so that $|t-i/n| < 1/n < \delta_{\eps/2}$ and $|t-(i+1)/n|< 1/n < \delta_{\eps/2}$ giving in the above inequality that
+\[ |f_n(t) - f(t)| < \eps \text{ for every } t \in I, \, n \ge N.\]
+This gives that $f_n \to f$ in $C(I)$.\\
+(iv) Closed subspace (use pointwise convergence) if $f_0=0$ and no subspace otherwise (doesn't contain the null function).
+\end{solution}
+
+\item
+Let $I$ be a compact interval. Show that the set $Y:=\{f\in C(I) | f(x)>0 \}$ is open in $X:=C(I)$. Compute its closure.
+\begin{solution}
+Suppose $f\in Y$. Then $f$ attains its minimum $m:=\min _I f$ on $I$ and hence $f(x)\ge m >0$. Choosing $\eps<m$ we conclude
+$B_\eps(f) \subset Y$ and hence $Y$ is open. If $f_n \in Y$ is a convergent sequence, then $f(x) := \lim_{n\to\infty} f_n(x) \ge 0$ and
+hence $\ol{Y}\subseteq \tilde{Y}:=\{f\in C(I) | f(x)\ge 0 \}$. Conversely, if $f\in \tilde{Y}$, then $f_n(x):=f(x)+\frac{1}{n} \in Y$ and $f_n\to f$.
+Hence $\tilde{Y}\subseteq \ol{Y}$.
+\end{solution}
+
+\item
+Compute the closure of the following subsets of $\ell^1(\N)$:
+(i) $B_1 := \{ a\in\ell^1(\N) | \sum_{j\in\N} |a_j|^2 \le 1\}$.
+(ii) $B_\infty:= \{ a\in\ell^1(\N) | \sum_{j\in\N} |a_j|^2 <\infty\}$.
+\begin{solution}
+(i). Consider a sequence $a^n$ from $B_1$. Then $a^n\to a$ in $\ell^1(\N)$ implies $a^n_j \to a_j$ for fixed $j\in\N$ and
+hence $\sum_{j=1}^N |a^n_j|^2 \to \sum_{j=1}^N |a_j|^2$ which shows $\sum_{j=1}^N |a_j|^2 \le 1$ for every $N\in\N$.
+Since $N$ is arbitrary, this shows $a\in B_1$ and consequently $B_1$ is closed.
+
+(ii). Since $B_\infty$ contains all sequences with finitely many nonzero terms, we have $\ol{B_\infty} = \ell^1(\N)$.
+\end{solution}
+
+\item
+Which of the following bilinear forms are scalar products on $\R^n$?
+\begin{enumerate}
+\item $s(x,y):= \sum_{j=1}^n (x_j + y_j)$.
+\item $s(x,y):= \sum_{j=1}^n \alpha_j x_j y_j$, $\alpha\in \R^n$.
+\end{enumerate}
+\begin{solution}
+Recall that a scalar product on $\R^n$ is a symmetric bilinear form on $\R^n$ which is positive definite (i.e.~$s(x,x) >0$ for every $x \ne 0$).
+(i). This bilinear form is clearly not positive definite. E.g.\ $s((1,0,\dots,0),(-1,0,\dots,0)=0$.
+(ii). This bilinear form will be positive definite if and only if $\alpha_j>0$ for all $1\le j \le n$.
+\end{solution}
+
+
+%%%%%%%%%%
+
+\item
+Show that the norm in a Hilbert space satisfies $\|f+g\|=\|f\|+\|g\|$ if and only if
+$f = \alpha g$, $\alpha\ge 0$, or $g=0$. Hence Hilbert spaces are strictly convex.
+\begin{solution}
+By definition of the norm $\|f+g\|=\|f\|+\|g\|$ will hold iff $\re\spr{f}{g}=\|f\|\|g\|$.
+In particular, we must have equality in the Cauchy--Schwarz inequality and thus $f = \alpha g$, $\alpha\in\C$, or $g=0$.
+Moreover, $\re\spr{\alpha g}{g} = \re(\alpha)\|g\|^2= |\alpha\| \|g\|^2$ shows $\alpha\ge 0$ if $g\ne 0$.
+\end{solution}
+
+\item
+Show that the maximum norm on $C[0,1]$ does not satisfy the parallelogram law.
+\begin{solution}
+Let $f$ be a nonnegative functions supported in $[0,\frac{1}{2}]$ with maximum $1$ and
+$g$ a nonnegative functions supported in $[\frac{1}{2},1]$ with maximum again $1$.
+Then $\|f+g\|_\infty^2 + \|f-g\|_\infty^2 = 1+1=2$ and $2 \|f\|_\infty^2 + 2\|g\|_\infty^2 = 2\cdot1+2\cdot1=4$.
+\end{solution}
+
+\item
+Show that $\ell^p(\N)$, $1\le p \le\infty$, is a Hilbert space if and only if $p=2$.
+\begin{solution}
+We already know that $\ell^2(\N)$ is a Hilbert space. Otherwise, let us choose $f=\delta^1$ and
+$g=\delta^2$ in the parallelogram law, which gives:
+\[
+4=  2 \|\delta^1\|_p^2 + 2\|\delta^2\|_p^2 \ne
+\|\delta^1 + \delta^2\|_p^2 + \|\delta^1 - \delta^2\|_p^2 = \begin{cases} 2\cdot2^{2/p}, & p\in[1,2)\cup(2,\infty),\\
+2\cdot 1, & p=\infty. \end{cases}
+\]
+\end{solution}
+
+\item
+Suppose $\qb$ is a complex vector space.
+Let $s(f,g)$ be a sesquilinear form on $\qb$ and $q(f):=s(f,f)$ the associated quadratic form.
+Prove the parallelogram law
+\[
+q(f + g) + q(f - g) = 2 q(f) + 2 q(g)
+\]
+and the polarization identity
+\[
+s(f,g) = \frac{1}{4} \left(q(f+g) - q(f-g) + \I\, q(f-\I g) - \I\, q(f+\I g) \right).
+\]
+Show that $s(f,g)$ is symmetric if and only if $q(f)$ is real-valued.
+
+Note, that if $\qb$ is a real vector space, then the parallelogram law is unchanged but
+the polarization identity in the form $s(f,g) = \frac{1}{4} (q(f+g) - q(f-g))$ will only hold if $s(f,g)$
+is symmetric.
+\begin{solution}
+Both the parallelogram law and the polarization identity are straightforward computations.
+If $s$ is symmetric, $s(f,g)=s(g,f)^*$, then $q(f)^*=s(f,f)^* = s(f,f)=q(f)$ shows that $q$ is
+real-valued. Conversely, if $q$ is real-valued, the polarization identity shows $s(f,g)=s(g,f)^*$
+since $q(\alpha f)=|\alpha|^2 q(f)$.
+\end{solution}
+
+\item
+Prove the claims made about $f_n$ in Example~1.11.
+\begin{solution}
+We need to show that the sequence of functions 
+\[ f_n(x):= \begin{cases}
+0 \quad & \text{ if } x \in [0,1-1/n],\\
+1+n(x-1) \quad & \text{ if } x \in [1-1/n , 1],\\
+1 \quad & \text{ if } x \in [1,2],
+\end{cases}\]
+is a Cauchy sequence in $\mathcal{L}^2_{cont}$ but has no limit in such space.
+Suppose $m < n$, then 
+\begin{align*}
+\|f_n-f_m\|^2 &= \int_{1-1/m}^{1-1/n} (1+m(x-1))^2 d x + \int_{1-1/n}^1 ((m-n)(x-1))^2 d x\\
+&= \frac{(1+m(x-1))^3}{3m} \biggr |^{1-1/n}_{1-1/m} + (m-n)^2 \frac{(x-1)^3}{3} \biggr |^1_{1-1/n} \\
+& = \frac{(1-m/n)^3}{3m} + \frac{(m-n)^2}{3m^3} \\
+&= \frac{(n-m)^3}{3n^3m} + \frac{(n-m)^2}{3m^3} \\
+& = \frac{(n-m)^2}{3n^2m}.
+\end{align*}
+This shows that $\|f_n-f_m\| = \frac{1}{\sqrt{3m}}(1-\frac{m}{n})$ hence that $f_n$ is
+a Cauchy sequence. Now if there were a limit $f\in C(I)$ we would have $0=\lim_{n\to\infty} \int_0^{1-\delta} |f(x)-f_n(x)|^2 dx = \int_0^{1-\delta} |f(x)|^2 dx$
+which shows $f(x)=0$ for $0\le x \le 1-\delta$ and since $\delta>0$ is arbitrary $f(x)=0$ for $0\le x \le 1$. Similarly
+$0=\lim_{n\to\infty} \int_{1+\delta}^2 |f(x)-f_n(x)|^2 dx = \int_0^{1-\delta} |f(x)-1|^2 dx$ shows $f(x)=1$ for $1\le x \le 2$. A contradiction.
+\end{solution}
+
+\item
+Provide a detailed proof of Theorem~1.10.
+\begin{solution}
+We need to show that, given a normed vector space $X$, and defined $\bar{X}$ as the space of equivalence classes of Cauchy sequences in $X$ with norm $\| [(x_j)_{j=1}^\infty\|:= \lim_{j \to + \infty} \|x_j\|$, then $\bar{X}$ is a complete normed vector space and contains $X$ as a dense subspace, where we are identifying $x\in X$ with the equivalence class of all sequences converging to $x$. We only prove completeness here. Let $\xi_n = [ (x_{n,j})_{j=1}^\infty ]$ be a Cauchy sequence in $\bar{X}$. We claim that $\xi_n$ converges to $\xi:=  [ (x_{j,j})_{j=1}^\infty ]$ in $\bar{X}$. 
+
+Without loss of generality, for every $n \in \N$, we can chose a representative $(x_{n,j})_{j=1}^{\infty}$ of $\xi_n$ such that (being  $(x_{n,j})_{j=1}^{\infty}$ Cauchy in $X$)  $|x_{n,j}-x_{n,k}|\le \frac{1}{n}$ for $j,k\ge n$.
+
+By definition of $\xi_n$ being Cauchy in $\bar{X}$, for every $\eps>0$ we can find $N_\eps \ge 4/\eps$ such that $\|\xi_n-\xi_m\|\le\eps/2$ for $n,m\ge N_\eps$.
+By definition this means that
+\[
+\lim_{j\to\infty} \|x_{n,j}-x_{m,j}\| \le \frac{\eps}{2} \text{ for every } n,m \ge N_\eps.
+\]
+
+Let $\eps>0$ be fixed and let $N_\eps$ be as above. Then, for every $j \ge m \ge k \ge n \ge N_{\eps}$, we have
+\begin{align*}
+\|x_{n,k} - x_{m,m}\| &\le \|x_{n,k}-x_{n,j}\|+ \|x_{n,j}-x_{m,j}\| + \|x_{m,j}-x_{m,m} \|\\
+& \le \frac{1}{n} + \|x_{n,j}-x_{m,j} \| + \frac{1}{m} \\
+& \le 2/N_\eps + \|x_{n,j}-x_{m,j} \| \\
+& \le \eps/2 + \|x_{n,j}-x_{m,j} \|.
+\end{align*}
+Passing to the limit as $j \to + \infty$, we see that 
+\[ \|x_{n,k}-x_{m,m}\| < \eps \text{ for every } m \ge k \ge n \ge N_{\eps}.\]
+Now choosing $k=n$ we see that $(x_{n,n})_{n=1}^\infty$ is a Cauchy sequence in $X$ and hence $\xi\in \bar{X}$. Moreover, choosing $k=m$ and then passing to the limit as $m \to + \infty$, shows that
+\[ \lim_{m \to + \infty} \|x_{n,m}-x_{m,m}\| < \eps \text{ for every } n \ge N_\eps,\]
+i.e.~that $\|\xi_n - \xi\|\le \eps$ for $n\ge N_\eps$ and hence $\xi_n \to \xi$ in $\bar{X}$.
+\end{solution}
+
+\item
+Find a compact subset of $\ell^\infty(\N)$ which does not satisfy (ii) from Fr\'echet's Theorem.
+\begin{solution}
+We have to exhibit a compact set $\mathcal{K} \subset \ell^\infty(\N)$ not verifying 
+\[ \text{ for every } \eps >0 \text{ there exists } n \in \N \text{ s.t. } \|(1-P_n)a\|_\infty \le \eps \text{ for every } a \in \mathcal{K}.\]
+Choose $\mathcal{K}:=\{a\}$ with $a=(1, 1, \dots, )$, the $\|(1-P_n)a\|_\infty=1$ for all $n \in \N$.
+\end{solution}
+
+\item
+Show that a subset $\mathcal{K}\subset c_0(\N)$ is relatively compact if and only if there is a nonnegative sequence $a\in c_0(\N)$ such that
+$|b_n| \le a_n$ for all $n\in\N$ and all $b\in \mathcal{K}$.
+\begin{solution}
+Let us recall Fréchet Theorem: a subset $\mathcal{K} \subset c_0(\N)$ if and only if 
+\begin{enumerate}
+\item is it pointwise buonded: for every $j \in \N$ there exists $M_j >0$ such that $\sup_{a \in \mathcal{K}} |a_j| \le M_j$ and,
+\item $ \text{ for every } \eps >0 \text{ there exists } n \in \N \text{ s.t. } \|(1-P_n)a\|_\infty \le \eps \text{ for every } a \in \mathcal{K}$.
+\end{enumerate}
+Let $a_n:= \sup_{b\in \mathcal{K}} \sup_{j\ge n} |b_j|$. Then (note $\sup_{j\ge n} |b_j| = \|(1-P_{n-1})b\|_\infty$) item (i) and (ii) from Fr\'echet's Theorem
+hold if and only if $a\in c_0(\N)$.
+\end{solution}
+
+%%%%%%%%%%
+
+\end{enumerate}
 \end{document}
-
